--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,9 +2,7 @@ name: Deploy to AWS ECR
 
 on:
   push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 env:
   AWS_REGION: ap-south-1
